# ModelPredictiveControl

Latex/: test.aux  test.fdb_latexmk  test.fls  test.toc
Qgis/: map.qgz  map.txt.qgz
Rviz/: MPC_Trajecotry_viz.rviz  MPC_with_Plugin_viz.rviz
TimeLine/: Timeline.xlsx
UML/: Trajectory_gen_initial_UML.mdj
ad_map_access_qgis/: metadata.txt
carla_map_access/: Town05.txt  coTransforms.py  main.py  test.py
custom_interfaces/: CMakeLists.txt
custom_interfaces/msg/: States.msg  Trajectories.msg  Trajectory.msg  TrajectoryData.msg
custom_messages/: CMakeLists.txt  package.xml
custom_messages/msg/: Object.msg  ObjectList.msg  TrafficLightControl.msg  TrafficLightProgram.msg  Trajectories.msg  Trajectory.msg  TrajectoryData.msg  TrajectoryDataPoint.msg  TrajectoryPoint.msg  VehicleControl.msg  VehicleControlParameter.msg  VehicleStatus.msg
custom_messages/srv/: CarlaTransform.srv
mpc_trajectory_bringup/launch/: mpc_trajectory_generator.launch.py
ros-bridge-addon/carla_aorta_test/: CMakeLists.txt  package.xml  setup.py
ros-bridge-addon/carla_aorta_test/config/: objects_aorta.json  objects_demo.json  objects_demo_2.json  objects_demo_2_original.json  objects_demo_3.json  objects_demo_3_orig.json  objects_mpc_obs_perpendicular.json  objects_mpc_origin_spawn.json  objects_mpc_test.json
ros-bridge-addon/carla_aorta_test/launch/: carla_aorta_demo.launch.py  carla_aorta_demo_2.launch.py  carla_aorta_demo_3.launch.py  carla_aorta_demo_3_Original.launch.py  carla_aorta_mpc_test.launch.py  carla_aorta_spawn_origin.py  carla_aorta_test.launch  carla_aorta_test.launch.py  carla_aorta_test_with_tp_tf.launch.py
ros-bridge/carla_ad_agent/launch/: carla_ad_agent.launch.py
ros-bridge/carla_ad_demo/launch/: carla_ad_demo_with_scenario.launch.py
ros-bridge/carla_ros_bridge/launch/: carla_ros_bridge.launch  carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch  carla_ros_bridge_with_example_ego_vehicle.launch.py
ros-bridge/carla_ros_bridge/test/: ros_bridge_client.py  ros_bridge_client_ros2_test.py
simulation/: README.md
simulation/akka_filter/: README.md  package.xml  setup.cfg  setup.py
simulation/akka_filter/akka_filter/: akka_filter_ros.py
simulation/akka_filter/config/: default.yaml
simulation/akka_filter/launch/: akka_filter.launch.py
simulation/akka_sensor_dummy/: README.md  package.xml  setup.cfg  setup.py
simulation/akka_sensor_dummy/akka_sensor_dummy/: akka_sensor_dummy_ros.py
simulation/akka_sensor_dummy/config/: default.yaml
simulation/akka_sensor_dummy/launch/: akka_sensor_dummy.launch.py
simulation/altran_filter/: README.md  package.xml  setup.cfg  setup.py
simulation/altran_filter/altran_filter/: altran_filter_ros.py
simulation/altran_filter/config/: default.yaml
simulation/altran_filter/launch/: altran_filter.launch.py
simulation/aorta_demo/: package.xml  setup.cfg  setup.py
simulation/aorta_demo/aorta_demo/: aorta_demo_ros.py
simulation/aorta_demo/config/: default.yaml  demo_01.yaml  demo_02.yaml  demo_03.yaml
simulation/aorta_demo/launch/: aorta_demo.launch.py
simulation/aorta_server/: README.md  package.xml  setup.cfg  setup.py
simulation/aorta_server/aorta_server/: aorta_server_ros.py
simulation/aorta_server/config/: default.yaml
simulation/aorta_server/launch/: aorta_server.launch.py
simulation/car_akka/: README.md  package.xml  setup.cfg  setup.py
simulation/car_akka/car_akka/: car_akka_ros.py
simulation/car_akka/config/: default.yaml
simulation/car_akka/launch/: car_akka.launch.py
simulation/car_altran/car_altran/: README.md  package.xml  setup.cfg  setup.py
simulation/car_altran/trajectory_following/: README.md  package.xml  setup.cfg  setup.py
simulation/car_altran/trajectory_following_parameter/: README.md  package.xml  setup.cfg  setup.py
simulation/car_altran/trajectory_planning/: README.md  package.xml  setup.cfg  setup.py
simulation/car_default/: README.md  package.xml  setup.cfg  setup.py
simulation/car_default/car_default/: car_default_ros.py  utils.py
simulation/car_default/config/: default.yaml
simulation/car_default/launch/: car_default.launch.py
simulation/car_emergency/: README.md  package.xml  setup.cfg  setup.py
simulation/car_emergency/car_emergency/: car_emergency_ros.py
simulation/car_tuk/: README.md  package.xml  setup.cfg  setup.py
simulation/default_filter/: README.md  package.xml  setup.cfg  setup.py
simulation/dummy_manual_control/: README.md  package.xml  setup.cfg  setup.py
simulation/edge_device/: README.md  package.xml  setup.cfg  setup.py
simulation/emergency_filter/: README.md  package.xml  setup.cfg  setup.py
simulation/launch/: simulation.launch.py  simulation_with_tp_tf.launch.py
simulation/ros_bridge_addon/: README.md  package.xml  setup.cfg  setup.py
simulation/traffic_light_control/: README.md  package.xml  setup.cfg  setup.py
simulation/tuk_filter/: README.md  package.xml  setup.cfg  setup.py
simulation/tuk_filter/config/: default.yaml
simulation/tuk_filter/launch/: tuk_filter.launch.py
simulation/tuk_filter/tuk_filter/: tuk_filter_ros.py
src/custom_interfaces/: package.xml
src/mpc_trajectory_bringup/: CMakeLists.txt  package.xml
src/trajectory_gen_mpc/: setup.py
tools/trajectory_visualization/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
tools/trajectory_visualization/include/: trajectories_display.h  trajectory_display.h
tools/trajectory_visualization/src/: trajectories_display.cpp  trajectory_display.cpp
trajectory_gen_mpc/: Observations.txt  setup.py
trajectory_gen_mpc/Latex/: test.fdb_latexmk  test.fls  test.tex
trajectory_gen_mpc/TimeLine/: Timeline.xlsx
trajectory_gen_mpc/install/: local_setup.sh  setup.sh
trajectory_gen_mpc/log/: latest_build
trajectory_gen_mpc/trajectory_gen_mpc/: CarlaBridgeHandler.py  CarlaClient.py  CarlaNode.py  DummyFreeSpaceServer.py  DynamicObstacle.py  GlobalConstraints.py  LaneExtractor.py  MultipleShooting.py  NonHolonomic.py  Obstacle.py  OdometryListener.py  StaticObstacle.py  TrajectorGenMpcNode.py  main.py  test.py
(+72 files in other folders)
