<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuk_filter</name>
  <version>0.0.0</version>
  <description>tuk_filter ROS Node</description>
  <maintainer email="amr.ibrahim@altran.com">Amr Ibrahim</maintainer>
  <license>MIT License</license>
  
  <depend>rclpy</depend>
  <depend>custom_messages</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>custom_messages</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>