<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>trajectory_visualization_plugin</name>
    <version>0.0.1</version>
    <description>Contains rviz2 plugin to visualize trajectory messages</description>
    <maintainer email="dhruv.chad@capgemini.com">Dhruv Chad</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>custom_messages</depend>
    <depend>rviz_common</depend>
    <depend>rviz_rendering</depend>
    <depend>rviz_default_plugins</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
